<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kelilink Seller</string>

    <string name="page_add_menu">Tambah Menu</string>
    <string name="page_edit_menu">Ubah Menu</string>
    <string name="page_edit_stock">Ubah Stok</string>
    <string name="page_edit_store_profile">Ubah Profil Dagangan</string>
    <string name="page_menu">Menu</string>
    <string name="page_profile">Profil</string>
    <string name="page_detail_order">Detail Pesanan</string>
    <string name="page_stock">Stok Habis</string>
    <string name="page_edit_password">Ubah Kata Sandi</string>
    <string name="page_forgot_password">Lupa Kata Sandi</string>

    <string name="tab_order_new">Dalam proses</string>
    <string name="tab_order_ready">Sudah siap</string>
    <string name="tab_order_done">Selesai</string>

    <string name="bottom_nav_order">Pesanan</string>
    <string name="bottom_nav_store">Dagangan</string>

    <string name="menu_edit_profile">Ubah Profil Dagangan</string>
    <string name="menu_edit_password">Ubah Kata Sandi</string>
    <string name="menu_logout">Keluar</string>

    <string name="btn_add">Tambah</string>
    <string name="btn_closed">Tutup</string>
    <string name="btn_cancel">Batal</string>
    <string name="btn_decline">Tolak</string>
    <string name="btn_delete">Hapus</string>
    <string name="btn_login">Masuk</string>
    <string name="btn_logout">Keluar</string>
    <string name="btn_open">Buka</string>
    <string name="btn_ready">Tandai pesanan siap</string>
    <string name="btn_taken">Tandai pesanan diambil</string>
    <string name="btn_register">Daftar</string>
    <string name="btn_save">Simpan</string>
    <string name="btn_forgot_password">Lupa kata sandi?</string>
    <string name="btn_send">Kirim</string>
    <string name="btn_to_login">Ke halaman masuk</string>

    <string name="title_login">Selamat datang di Kelilink Seller!</string>
    <string name="content_login">Kelola usaha Anda dengan satu gerakan tangan.</string>
    <string name="title_register">Daftarkan Akun Anda</string>
    <string name="content_register">Daftarkan Diri dan Dagangan Anda untuk Menggunakan Layanan Kelilink Seller</string>
    <string name="content_have_account">Sudah punya akun?</string>
    <string name="content_dont_have_account">Belum punya akun?</string>

    <string name="title_input_store_image">Foto Dagangan</string>
    <string name="content_input_store_image">Foto akan tampil dalam pada halaman detail dagangan Anda. Anda disarankan untuk mengunggah foto gerobak dagangan.</string>
    <string name="title_input_category">Jenis Dagangan</string>
    <string name="content_input_category">Jenis dagangan akan mencirikan jenis kuliner yang Anda jual. Pilih maksimal 3 kategori.</string>
    <string name="title_input_menu_image">Foto Menu</string>
    <string name="content_input_menu_image">Foto akan tampil pada deskripsi menu.</string>
    <string name="content_unit">contoh: tusuk, posi, buah, biji, dll.</string>
    <string name="title_store_status">Status Jualan</string>
    <string name="content_store_status_closed">Tekan tombol merah untuk berhenti berjualan.</string>
    <string name="content_store_status_open">Tekan tombol hijau untuk mulai berjualan.</string>
    <string name="title_menu_empty">Belum ada menu di dagangan</string>
    <string name="content_menu_empty">Tambahkan menu baru untuk mulai berjualan.</string>
    <string name="title_stock_management">Stok tersedia</string>
    <string name="content_stock_management">Menu dengan stok tersedia/aktif akan muncul di daftar menu dagangan dan dapat dipesan oleh pelanggan</string>
    <string name="title_order_empty">Tidak ada pesanan</string>
    <string name="title_total">Total</string>

    <string name="title_email">Email</string>
    <string name="title_signed_email">Email Terdaftar</string>
    <string name="content_reset_password">Isi dengan email yang Anda gunakan ketika mendaftar akun.</string>

    <string name="title_delete">Hapus</string>
    <string name="content_delete_menu">Anda yakin ingin menghapus menu ini?</string>

    <string name="title_verify_email">Verifikasi Email</string>
    <string name="content_verify_email">Link verifikasi telah dikirim ke &lt;b>%1$s&lt;/b>. Segera cek email Anda dan tekan tombol verifikasi untuk melanjutkan proses pendaftaran.</string>

    <string name="title_account">Akun</string>
    <string name="title_other">Lainnya</string>
    <string name="title_logout">Keluar</string>
    <string name="content_logout">Anda yakin ingin keluar?</string>

    <string name="hint_description">Deskripsi</string>
    <string name="hint_name">Nama</string>
    <string name="hint_price">Harga</string>
    <string name="hint_unit">Satuan</string>
    <string name="hint_store_name">Nama Dagangan</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Kata Sandi</string>
    <string name="hint_password_confirmastion">Konfirmasi Kata Sandi</string>
    <string name="hint_password_new">Kata Sandi Baru</string>
    <string name="hint_password_old">Kata Sandi Lama</string>

    <string name="error_field_empty">Data harus diisi</string>
    <string name="error_field_email">Email tidak valid</string>
    <string name="error_field_password">Kata sandi terlalu pendek</string>
    <string name="error_password_confirmation">Kata sandi tidak sama</string>
    <string name="error_field">Periksa data Anda kembali</string>

    <string name="state_loading" tools:ignore="TypographyEllipsis">Sedang memuat...</string>
    <string name="state_no_location">Lokasi tidak ditemukan. Periksa GPS Anda.</string>
    <string name="state_operating_closed">Tekan tombol hijau untuk mulai berjualan.</string>
    <string name="state_operating_open">Tekan tombol merah untuk menutup dagangan.</string>
    <string name="state_out_of_stock">Stok habis</string>

    <string name="toast_order_accepted">Pesanan ditandai ditambahkan ke antrean</string>
    <string name="toast_order_declined">Pesanan ditandai ditolak</string>
    <string name="toast_order_ready">Pesanan ditandai sudah siap</string>
    <string name="toast_order_done">"Pesanan ditandai sudah diambil</string>

    <string name="ordered_menu_format">%2dx \u0020%2$s</string>

    <string name="placeholder_whatsapp_message">Saya (nama), domisili (nama daerah), ingin mengajukan laporan mengenai (maksud)</string>
    <string name="placeholder_total">Rp0,00</string>

    <string name="content_description_image">Gambar</string>

    <string-array name="menu_name">
        <item>Profil</item>
        <item>Menu</item>
        <item>Stok Habis</item>
    </string-array>

    <string-array name="menu_icon">
        <item>@drawable/menu_profile</item>
        <item>@drawable/menu_menu</item>
        <item>@drawable/menu_stock</item>
    </string-array>

    <string-array name="category_name">
        <item>Bakso</item>
        <item>Minuman</item>
        <item>Es Krim</item>
        <item>Jajanan</item>
        <item>Buah</item>
        <item>Sayuran</item>
        <item>Nasi</item>
        <item>Sate</item>
    </string-array>

</resources>