<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    tools:context=".features.auth.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/r_iv_logo"
            android:layout_width="@dimen/image_view_category"
            android:layout_height="@dimen/image_view_category"
            android:src="@drawable/logo"
            android:layout_marginTop="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description_image" />

        <TextView
            android:id="@+id/r_tv_title_regiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_register"
            android:textAppearance="@style/TextAppearance.KelilinkSeller.Heading6"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_component_extra"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/r_iv_logo" />

        <TextView
            android:id="@+id/r_tv_content_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_layout_more"
            android:layout_marginTop="@dimen/margin_component_more"
            android:gravity="center"
            android:text="@string/content_register"
            android:textAppearance="@style/TextAppearance.KelilinkSeller.Body2"
            app:layout_constraintTop_toBottomOf="@+id/r_tv_title_regiter" />

        <com.kartikasw.kelilinkseller.util.custom_view.KelilinkEditText
            android:id="@+id/r_et_store_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_text_input"
            android:layout_marginHorizontal="@dimen/margin_layout"
            android:layout_marginTop="@dimen/margin_layout_more"
            android:hint="@string/hint_store_name"
            android:singleLine="true"
            android:paddingHorizontal="@dimen/margin_component_more"
            app:layout_constraintTop_toBottomOf="@id/r_tv_content_register"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="16dp" />

        <LinearLayout
            android:id="@+id/r_layout_store_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/margin_layout"
            android:padding="@dimen/margin_layout"
            android:background="@drawable/bg_section_input"
            android:layout_marginTop="@dimen/margin_component_extra"
            app:layout_constraintTop_toBottomOf="@id/r_et_store_name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_input_store_image"
                android:textAppearance="@style/TextAppearance.KelilinkSeller.Subtitle2"
                android:textColor="@color/orange"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_input_store_image"
                android:layout_marginTop="@dimen/margin_component_more"
                android:textAppearance="@style/TextAppearance.KelilinkSeller.Body2"/>

            <ImageView
                android:id="@+id/r_iv_store_image"
                android:layout_width="@dimen/image_view_input"
                android:layout_height="@dimen/image_view_input"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_component_more"
                android:contentDescription="@string/content_description_image"
                android:src="@drawable/placeholder_add_image"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/r_layout_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_layout"
            android:layout_marginHorizontal="@dimen/margin_layout"
            android:background="@drawable/bg_section_input"
            android:layout_marginTop="@dimen/margin_component_extra"
            app:layout_constraintTop_toBottomOf="@id/r_layout_store_image">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_input_category"
                android:textAppearance="@style/TextAppearance.KelilinkSeller.Subtitle2"
                android:textColor="@color/orange"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_input_category"
                android:layout_marginTop="@dimen/margin_component_more"
                android:textAppearance="@style/TextAppearance.KelilinkSeller.Body2"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/r_cg_category"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_component_extra"
                android:layout_height="wrap_content"
                app:selectionRequired="true"/>

        </LinearLayout>

        <com.kartikasw.kelilinkseller.util.custom_view.KelilinkEditText
            android:id="@+id/r_et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_text_input"
            android:layout_marginHorizontal="@dimen/margin_layout"
            android:layout_marginTop="@dimen/margin_component_extra"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/margin_component_more"
            app:layout_constraintTop_toBottomOf="@id/r_layout_category"
            tools:ignore="TextContrastCheck"/>

        <com.kartikasw.kelilinkseller.util.custom_view.KelilinkEditText
            android:id="@+id/r_et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_text_input"
            android:layout_marginHorizontal="@dimen/margin_layout"
            android:layout_marginTop="@dimen/margin_component_extra"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/margin_component_more"
            app:layout_constraintTop_toBottomOf="@id/r_et_email"
            tools:ignore="TextContrastCheck"/>

        <com.kartikasw.kelilinkseller.util.custom_view.KelilinkEditText
            android:id="@+id/r_et_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_text_input"
            android:layout_marginHorizontal="@dimen/margin_layout"
            android:layout_marginTop="@dimen/margin_component_extra"
            android:hint="@string/hint_password_confirmastion"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/margin_component_more"
            app:layout_constraintTop_toBottomOf="@id/r_et_password"
            tools:ignore="TextContrastCheck"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/r_btn_register"
            style="@style/Widget.KelilinkSeller.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_layout"
            android:layout_marginTop="@dimen/margin_layout_extra"
            android:text="@string/btn_register"
            app:layout_constraintTop_toBottomOf="@id/r_et_password_confirmation"
            tools:layout_editor_absoluteX="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_component_more"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_layout_extra"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/r_btn_register">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_have_account"
                android:textAppearance="@style/TextAppearance.KelilinkSeller.Body2" />

            <TextView
                android:id="@+id/r_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_component"
                android:text="@string/btn_login"
                android:textAppearance="@style/TextAppearance.KelilinkSeller.Body2"
                android:textColor="@color/orange"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>