<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:overScrollMode="never"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.auth.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/l_iv_logo"
            android:layout_width="@dimen/image_view_category"
            android:layout_height="@dimen/image_view_category"
            android:src="@drawable/logo"
            android:layout_marginTop="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description_image"/>

        <ImageView
            android:id="@+id/l_iv_illustration"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_view_store"
            android:src="@drawable/food_truck"
            android:layout_marginTop="@dimen/margin_component_extra"
            app:layout_constraintTop_toBottomOf="@+id/l_iv_logo"
            android:contentDescription="@string/content_description_image" />

        <TextView
            android:id="@+id/credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sumber gambar: Freepik"
            android:textAppearance="@style/TextAppearance.KelilinkSeller.Caption"
            android:textSize="9dp"
            app:layout_constraintEnd_toEndOf="@+id/r_tv_content_login"
            app:layout_constraintTop_toBottomOf="@+id/l_iv_illustration" />

        <TextView
            android:id="@+id/l_tv_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textAppearance="@style/TextAppearance.KelilinkSeller.Heading6"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_component_extra"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/credit" />

        <TextView
            android:id="@+id/r_tv_content_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_layout_more"
            android:layout_marginTop="@dimen/margin_component_more"
            android:gravity="center"
            android:text="@string/content_login"
            android:textAppearance="@style/TextAppearance.KelilinkSeller.Body2"
            app:layout_constraintTop_toBottomOf="@+id/l_tv_title_login" />

        <com.kartikasw.kelilinkseller.util.custom_view.KelilinkEditText
            android:id="@+id/l_et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_text_input"
            android:layout_marginHorizontal="@dimen/margin_layout"
            android:layout_marginTop="@dimen/margin_layout_more"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/margin_component_more"
            app:layout_constraintTop_toBottomOf="@id/r_tv_content_login"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="16dp" />

        <com.kartikasw.kelilinkseller.util.custom_view.KelilinkEditText
            android:id="@+id/l_et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_text_input"
            android:layout_marginHorizontal="@dimen/margin_layout"
            android:layout_marginTop="@dimen/margin_component_extra"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/margin_component_more"
            app:layout_constraintTop_toBottomOf="@id/l_et_email"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/l_btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.KelilinkSeller.Body2"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:text="@string/btn_forgot_password"
            app:layout_constraintTop_toBottomOf="@id/l_et_password"
            app:layout_constraintEnd_toEndOf="@id/l_et_password"
            android:layout_marginTop="@dimen/margin_component"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/l_btn_login"
            style="@style/Widget.KelilinkSeller.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_layout"
            android:layout_marginTop="@dimen/margin_layout_extra"
            android:text="@string/btn_login"
            app:layout_constraintTop_toBottomOf="@id/l_btn_forgot_password"
            tools:layout_editor_absoluteX="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_component_more"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_layout_extra"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/l_btn_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_dont_have_account"
                android:textAppearance="@style/TextAppearance.KelilinkSeller.Body2" />

            <TextView
                android:id="@+id/l_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_component"
                android:text="@string/btn_register"
                android:textAppearance="@style/TextAppearance.KelilinkSeller.Body2"
                android:textColor="@color/orange"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>