<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.store.menu.edit.EditMenuActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mf_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/mf_info">

                <LinearLayout
                    android:id="@+id/mf_layout_menu_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="@dimen/margin_layout"
                    android:padding="@dimen/margin_layout"
                    android:background="@drawable/bg_section_input"
                    android:layout_marginTop="@dimen/margin_component_extra"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_input_menu_image"
                        android:textAppearance="@style/TextAppearance.KelilinkSeller.Subtitle2"
                        android:textColor="@color/orange"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_input_menu_image"
                        android:layout_marginTop="@dimen/margin_component_more"
                        android:textAppearance="@style/TextAppearance.KelilinkSeller.Body2"/>

                    <ImageView
                        android:id="@+id/mf_iv_menu"
                        android:layout_width="@dimen/image_view_input"
                        android:layout_height="@dimen/image_view_input"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_component_more"
                        android:src="@drawable/placeholder_add_image"
                        tools:ignore="ContentDescription,ImageContrastCheck" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/mf_et_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_text_input"
                    android:layout_marginHorizontal="@dimen/margin_layout"
                    android:layout_marginTop="@dimen/margin_component_extra"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:paddingHorizontal="@dimen/margin_component_more"
                    app:layout_constraintTop_toBottomOf="@+id/mf_layout_menu_image"
                    tools:ignore="TextContrastCheck"
                    tools:layout_editor_absoluteX="16dp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/mf_et_price"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_text_input"
                    android:layout_marginHorizontal="@dimen/margin_layout"
                    android:layout_marginTop="@dimen/margin_component_extra"
                    android:hint="@string/hint_price"
                    android:inputType="number"
                    android:paddingHorizontal="@dimen/margin_component_more"
                    app:layout_constraintTop_toBottomOf="@+id/mf_et_name"
                    tools:ignore="TextContrastCheck"
                    tools:layout_editor_absoluteX="16dp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/mf_et_unit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_text_input"
                    android:layout_marginHorizontal="@dimen/margin_layout"
                    android:layout_marginTop="@dimen/margin_component_extra"
                    android:hint="@string/hint_unit"
                    android:inputType="text"
                    android:paddingHorizontal="@dimen/margin_component_more"
                    app:layout_constraintTop_toBottomOf="@+id/mf_et_price"
                    tools:ignore="TextContrastCheck"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_component"
                    android:text="@string/content_unit"
                    android:textAppearance="@style/TextAppearance.KelilinkSeller.Caption"
                    app:layout_constraintStart_toStartOf="@+id/mf_et_unit"
                    app:layout_constraintTop_toBottomOf="@+id/mf_et_unit" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.6" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mf_btn_action"
                    style="@style/Widget.KelilinkSeller.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_layout_extra"
                    android:text="@string/btn_save"
                    app:layout_constraintEnd_toEndOf="@+id/mf_layout_menu_image"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    tools:ignore="TextContrastCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                android:id="@+id/mf_loading"
                layout="@layout/placeholder_menu_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>